BusOne/src/objects/BOT_Product_Formulary_Affiliation__c.object
<CustomObject>
    <description>It is a Junction object. It has a Master Detail relationship with Plan Product and Formulary Product</description>
    <fields>
        <fullName>BOT_Account_c__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It is a lookup to the account. This is field is used for store the account ID</description>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Formulary</relationshipLabel>
        <relationshipName>Account_c</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOT_Formulary_Product__c</fullName>
        <description>To populate the formulary product.</description>
        <label>Formulary Product</label>
        <referenceTo>Formulary_Products_vod__c</referenceTo>
        <relationshipLabel>Plan Products</relationshipLabel>
        <relationshipName>Formulary_Product</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BOT_Plan_Product_Name__c</fullName>
        <description>To populate the plan product name.</description>
        <label>Plan Product Name</label>
        <referenceTo>Account_Plan_vod__c</referenceTo>
        <relationshipLabel>Plan Formulary</relationshipLabel>
        <relationshipName>Plan_Product_Name</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Product_Formulary_Affiliation</label>
    <nameField>
        <displayFormat>PF-{0000}</displayFormat>
        <label>S No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product_Formulary_Affiliation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>